# talk-stellar-meridian24-testing

./: Makefile  README.md  TALK.md
.demo/: demo.json
auth/: Cargo.toml
auth/src/: lib.rs  test_fail.rs  test_pass.rs
auth/test_snapshots/test_fail/: fail.1.json
auth/test_snapshots/test_pass/: pass.1.json
token/: .gitignore  Cargo.toml
token/fuzz/: Cargo.toml
token/fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs
token/src/: lib.rs  tests.rs
token/test_snapshots/tests/: test.1.json  test2.1.json  test_differential.1.json  test_differential.2.json  test_fuzz_input.1.json  test_mock_true.1.json  test_transfer.1.json
