[package]
name = "token"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.0-rc.1" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0-rc.1", features = ["testutils"] }

[patch.crates-io.soroban-sdk]
git = "https://github.com/stellar/rs-soroban-sdk"
branch = "main"
