[package]
name = "token"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib","cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.0-rc.1" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0-rc.1", features = ["testutils"] }

[patch.crates-io.soroban-sdk]
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "9634810c7f4744bfd4d65c3c6824290e01af839d"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
