[package]
name = "token-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
soroban-sdk = { version = "22.0.0-rc.1", features = ["testutils"] }

[dependencies.token]
path = ".."

[patch.crates-io.soroban-sdk]
git = "https://github.com/stellar/rs-soroban-sdk"
branch = "main"

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[profile.release]
lto = false
