[package]
name = "token-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.0"
soroban-sdk = { version = "22.0.0-rc.1", features = ["testutils"] }

[dependencies.token]
path = ".."

[patch.crates-io.soroban-sdk]
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "9634810c7f4744bfd4d65c3c6824290e01af839d"

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_2"
path = "fuzz_targets/fuzz_target_2.rs"
test = false
doc = false
bench = false
